--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!doctype html>
 <html lang="en">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6D2PQG3LC"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XXXXXXXXXX');
+  </script>
+
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
