--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!doctype html>
 <html lang="en">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6D2PQG3LC"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-XXXXXXXXXX');
-  </script>
-
-  <head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>KM Gnana Deepak | Full Stack Developer </title>
+  <title>KM Gnana Deepak | Full Stack Developer</title>
 
   <meta name="description" content="Portfolio of KM Gnana Deepak - Passionate Full Stack Developer specializing in MERN stack and professional DaVinci Resolve video editor." />
   <meta name="author" content="KM Gnana Deepak" />
@@ -31,16 +23,23 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/logo1.png" />
 
-
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6D2PQG3LC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-C6D2PQG3LC');
+  </script>
 </head>
 
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
