--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/logo1.png" />
+<link rel="shortcut icon" href="/logo1.png?v=2">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
